openidm-ui/openidm-ui-common/src/main/resources/css/card.less
/**
 * The contents of this file are subject to the terms of the Common Development and
 * Distribution License (the License). You may not use this file except in compliance with the
 * License.
 *
 * You can obtain a copy of the License at legal/CDDLv1.0.txt. See the License for the
 * specific language governing permission and limitations under the License.
 *
 * When distributing Covered Software, include this CDDL Header Notice in each file and include
 * the License file at legal/CDDLv1.0.txt. If applicable, add the following below the CDDL
 * Header, with the fields enclosed by brackets [] replaced by your own identifying
 * information: "Portions copyright [year] [name of copyright owner]".
 *
 * Copyright 2015 ForgeRock AS.
 */

.card-container {
  margin-bottom: 30px;
  display: block;
  border: 1px solid #eee;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.14);
  background-color: #fff;
  width: 100%;
  height: 322px;
  border-radius: 4px;
  position: relative;

  &:hover {
    border-color: #3f7269;
    -webkit-transition: border-color 0.3s ease-in-out;
    -o-transition: border-color 0.3s ease-in-out;
    -moz-transition: border-color 0.3s ease-in-out;
    -ms-transition: border-color 0.3s ease-in-out;
    transition: border-color 0.3s ease-in-out;
    text-decoration: none;

    .image.circle {
      background-color: #3f7269;
      -webkit-transition: background-color 0.3s ease-in-out;
      -o-transition: background-color 0.3s ease-in-out;
      -moz-transition: background-color 0.3s ease-in-out;
      -ms-transition: background-color 0.3s ease-in-out;
      transition: background-color 0.3s ease-in-out;
    }
  }
}

.card {
  background: none repeat scroll 0 0 #FFFFFF;
  border-radius: 4px;
  color: #444444;
  height: 320px;
  -webkit-transition: -webkit-transform .5s;
  -moz-transition: -moz-transform .5s;
  -o-transition: -o-transform .5s;
  transition: transform .5s;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  -o-transform-style: preserve-3d;
  transform-style: preserve-3d;
  position: relative;

  .card-heading {
    padding: 15px;
    position: absolute;
    top:0;
    right:0;
    z-index: 4;

    .btn-group {
      position: absolute;
      right: 0;
      top: 5px;
    }

    .btn-link {
      color: #777;

      &:hover,
      &:focus {
        color: #36625a;
      }
    }
  }

  .card-footer {
    border-top: 1px solid #EEEEEE;
    color: #999999;
    margin: 0;
    padding: 10px 15px;
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
  }

  h3 {
    font-size: 19px;
    line-height: 1.2;
    margin: 10px 0 0;
    text-align: center;
    text-transform: capitalize;
  }

  .content {
    background-color: rgba(0, 0, 0, 0);
    box-shadow: none;
    padding: 10px 15px 15px;

    .main {
      min-height: 70px;
    }
  }

  .image {
    text-align: center;
    height: 120px;
    display: block;
    margin: 0 auto 0;
    display: table;
    text-align: center;

    i {
      display: table-cell;
      vertical-align: middle;
    }

    &.circle {
      border-radius: 50%;
      overflow: hidden;
      width: 120px;
      background-color: #519387;
      color: #fff;
      font-size: 60px;
    }
  }

  .card-body {
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;

    .cardtype {
      color: #999999;
      text-align: center;
    }

    a {
      padding-top: 30px;
      display: block;

      &:hover,
      &:focus {
        text-decoration: none;
      }
    }
  }
}

/*
  Add card styles
*/
.add-card {
  min-height: 20px;
  padding: 19px;
  margin-bottom: 20px;
  background-color: #f5f5f5;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
  height: 322px;
  display: table;
  width: 100%;
  text-align: center;

  >div {
    display: table-cell;
    vertical-align: middle;
  }

  a {
    color: #777;

    &:hover,
    &:focus {
      color: #519387;
      text-decoration: none;

      .image.circle {
        background-color: #519387;
      }
    }
  }

  .content {
    padding: 15px 0;
  }

  .image {
    text-align: center;
    height: 72px;
    display: block;
    margin: 0 auto 0;
    display: table;
    text-align: center;
    -webkit-transition: background-color 0.1s ease-in-out;
    -o-transition: background-color 0.1s ease-in-out;
    -moz-transition: background-color 0.1s ease-in-out;
    -ms-transition: background-color 0.1s ease-in-out;
    transition: background-color 0.1s ease-in-out;

    &.circle {
      border-radius: 50%;
      overflow: hidden;
      width: 72px;
      background-color: #ccc;
      color: #fff;
      font-size: 42px;
    }

    i, .inner {
      display: table-cell;
      vertical-align: middle;
    }
  }
}

/*
  Small Card
*/
.panel-body .card-container {
  margin-bottom: 20px;
}


.card .image.circle.circle-sm {
  width: 60px;
  font-size: 28px;
  height: 60px;
}

.card-container.card-container-sm {
  height: 174px;

  .card {
    height: 172px;

    .content .main {
      min-height: 50px;
    }
  }

  h3 {
    font-weight: 300;
    margin-top: 0;
    font-size: 16px;
  }

}

/*
  Wide Card
*/
.wide-card {
  height: 85px;
  margin-bottom: 20px;
  position: relative;

  &.card {
    border: 1px solid #ddd;
  }

  &:hover {
    border-color: #3f7269;
    -webkit-transition: border-color 0.3s ease-in-out;
    -o-transition: border-color 0.3s ease-in-out;
    -moz-transition: border-color 0.3s ease-in-out;
    -ms-transition: border-color 0.3s ease-in-out;
    transition: border-color 0.3s ease-in-out;
    cursor: pointer;
  }

  .btn-link {
    color: #777;

    &:hover {
      color: #36625a;
    }
  }

  .panel-heading .btn-link:hover,
  .panel-footer .btn-link:hover,
  .panel-heading .btn-link:focus,
  .panel-footer .btn-link:focus {
    background: #eee;
    text-decoration: none;
  }

  .card-body {
    overflow: auto;
    display: table;
    width: 100%;
  }
}

